# taxis

./: README.md
airflow/: .env  Dockerfile  config.ini  config.ini_template  config.properties  config2.ini  config2.ini_template  demo.sh  docker-compose.yml  docker-compose.yml_gis
airflow/dags/: dag.py
airflow/foooo/: Dockerfile
db_loader_download_api/: README.md  config.ini  influx-configs  influx.conf  influx_load_csv.py  poetry.lock_  postgres_load_csv.py  py_download.py  pyproject.toml  pyproject_bk.toml  test_postgres_load_csv.py  trips.sql
db_loader_download_api/download_api/: Dockerfile  build_docker.sh  config_docker.ini  config_test.ini  download_request.proto  download_request_pb2.py  download_request_pb2_grpc.py  grpc_client.py  grpc_server.py  lake.py  requirements.txt  requirements_needed.txt  test_grpc.py
db_loader_download_api/download_api/trips_lake/: readme  sample.csv
summary_api/: Dockerfile  api.py  build_docker.sh  config.ini  config.py  db_pool.py  default.ini  pyproject.toml  readme.md  requirements.txt  server.py  summary.py  test_api.py
taxis/: Dockerfile  build_docker.sh  config.properties  dependency-reduced-pom.xml  pom.xml  readme.MD
taxis/src/main/java/com/creativefab/: Constants.java  JsonUtil.java  Life.java  LifeCycleException.java  TimebucketUtil.java
taxis/src/main/resources/: log4j.properties
taxis/src/test/java/com/creativefab/: TestBatchTaxiTripPuller.java  TestBlobStore.java  TimeBucketUtilTest.java
taxis/src/test/java/org/example/: LocalFileSystemExample.java
taxis/src/test/resources/: test.properties
(+13 files in other folders)
